syntax = "proto3";
package ProtoApi;
option go_package = "timesheet/ProtoApi/";

service SheduleService{
      rpc GetSubjectFromDbRPC(Wrap) returns (SubjectsFromDb);
      rpc GetTutorsFromDbRPC(Wrap) returns (TutorsFromDb);
      rpc GetAuditoriumFromDbRPC(Wrap) returns (AuditoriumsFromDb);
      rpc GetTypeFromDbRPC(Wrap) returns (TypesFromDb);
      rpc GetGroupFromDbRPC(Wrap) returns (GroupsFromDb);
}

message Wrap{}
message SubjectsFromDb{
  repeated StructSubject Subjects = 1;
}
message StructSubject {
  int32 Id = 1;
  string SubjectItem = 2;
}
message TutorsFromDb{
  repeated StructTutor Tutors = 1;
}
message StructTutor {
  int32 Id = 1;
  string SecondName = 2;
  string FirstName = 3;
  string LastName = 4;
}
message AuditoriumsFromDb{
  repeated StructClassroom Auditoriums = 1;
}
message StructClassroom {
  int32 Id = 1;
  string Classroom = 2;
}
message TypesFromDb{
  repeated StructType Types = 1;
}
message StructType {
  int32 Id = 1;
  string Type = 2;
}
message GroupsFromDb{
  repeated StructGroup Groups = 1;
}
message StructGroup {
  int32 Id = 1;
  string GroupName = 2;
}